--- a/src/app/modules/approval/components/filter-date/filter-date.component.html
+++ b/src/app/modules/approval/components/filter-date/filter-date.component.html
@@ -4,7 +4,7 @@
 		id="filter-dropdown-wrapper"
 		class="d-flex">
 		<div class="flex-grow-1 d-flex align-items-center">
-			<div id="filter-dropdown-label">{{selected}}</div>
+			<div id="filter-dropdown-label">{{startDate}} - {{endDate}}</div>
 		</div>
 		<div id="arrow-down-gray-wrapper"
 			class="d-flex justify-content-center align-items-center">
@@ -13,6 +13,11 @@
 		</div>
 	</div>
 	<div ngbDropdownMenu>
-		<nest-datepicker-b></nest-datepicker-b>
+		<div id="date-picker-wrapper"
+			class="d-flex">
+			<nest-datepicker-b (dateSelectedEvent)="selectedStartDate($event)"></nest-datepicker-b>
+			<nest-datepicker-b (dateSelectedEvent)="selectedEndDate($event)"></nest-datepicker-b>
+		</div>
+
 	</div>
 </div>
