--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -22,7 +22,7 @@
 						class="item">
 						<address-notif [label]='listApproval'
 							[selected]='selected'
-							(diklik)='handleSelect($event,i)'></address-notif>
+							(diklik)='handleSelect($event)'></address-notif>
 					</div>
 				</div>
 
@@ -61,7 +61,7 @@
 
 				<wsh wide="24px"></wsh>
 
-				<reset-filter-button class="d-flex align-items-center"></reset-filter-button>
+				<reset-filter class="d-flex align-items-center"></reset-filter>
 
 			</div>
 			<wsv wide="20px"></wsv>
