--- a/src/app/modules/transaction/components/filter-buttons-section/filter-buttons-section.component.html
+++ b/src/app/modules/transaction/components/filter-buttons-section/filter-buttons-section.component.html
@@ -13,6 +13,6 @@
 	</div>
 	<wsh wide="24px"></wsh>
 
-	<div>reset filter</div>
+	<reset-filter class="d-flex align-items-center"></reset-filter>
 
 </div>
