--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -21,6 +21,7 @@
 						<address-notif [label]='listApproval'
 							[selected]='selected'
 							(diklik)='diklikEvent($event)'></address-notif>
+						<address-warn-notif [label]='listApproval'></address-warn-notif>
 					</div>
 				</div>
 
@@ -41,9 +42,9 @@
 
 			</section>
 
-			<wsv wide="20px"></wsv>
-			<div id="horizontal-line"></div>
 			<wsv wide="10px"></wsv>
+			<div id="horizontal-line"></div>
+			<wsv wide="20px"></wsv>
 
 			<div class="d-flex align-items-center">
 				<div class="flex-grow-1 d-flex ">
