--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -61,7 +61,8 @@
 
 				<wsh wide="24px"></wsh>
 
-				<reset-filter class="d-flex align-items-center"></reset-filter>
+				<reset-filter class="d-flex align-items-center"
+					(click)="resetButtonOnClick()"></reset-filter>
 
 			</div>
 			<wsv wide="20px"></wsv>
