--- a/src/app/modules/approval/components/item-approval/item-approval.component.html
+++ b/src/app/modules/approval/components/item-approval/item-approval.component.html
@@ -27,7 +27,7 @@
 				<div id="purchaser-col-3"
 					class="d-flex align-items-center">
 					<div>
-						<div class="label-gray d-flex flex-row-reverse">Ongkos Kirim</div>
+						<div class="label-gray d-flex flex-row-reverse">Harga Belanja</div>
 						<div class="d-flex flex-row-reverse label-gray-2">Rp 1.000.000</div>
 					</div>
 				</div>
