--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -75,6 +75,10 @@
 					allowChanges="true"></check-box-round>
 				<wsh wide="14px"></wsh>
 				<div id="pilih-semua">Pilih Semua</div>
+
+				<wsh wide="340px"></wsh>
+				<div><span id="total-barang-terpilih">3 </span><span id="barang-terpilih-label"> Barang Terpilih</span>
+				</div>
 			</div>
 			<wsv wide="15px"></wsv>
 		</div>
@@ -99,6 +103,5 @@
 
 		</div>
 	</div>
-
 
 </div>
