--- a/src/app/modules/transaction/components/item-transaction/item-transaction.component.scss
+++ b/src/app/modules/transaction/components/item-transaction/item-transaction.component.scss
@@ -69,3 +69,22 @@
 
 	color: #bebebe;
 }
+
+
+#button-wrapper {
+	background: #E0E0E0;
+	border: 0.5px solid #E0E0E0;
+	box-sizing: border-box;
+	border-radius: 57px;
+	width: 129px;
+	height: 28px;
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 14px;
+	line-height: 19px;
+	display: flex;
+	align-items: center;
+	text-align: center;
+	color: #BDBDBD;
+}
