--- a/src/app/shared/components/red-bg-button/red-bg-button.component.scss
+++ b/src/app/shared/components/red-bg-button/red-bg-button.component.scss
@@ -10,7 +10,7 @@
 	border: 0.5px solid $color-primary;
 	box-sizing: border-box;
 	border-radius: 57px;
-	width: 129px;
+	width: 150px;
 	height: 28px;
 
 	font-family: $primary-font;
@@ -25,4 +25,5 @@
 	/* Primary Color */
 
 	color: $putih-tok;
+	cursor: pointer;
 }
