--- a/src/app/modules/transaction-detail/components/status-pesanan/status-pesanan.component.html
+++ b/src/app/modules/transaction-detail/components/status-pesanan/status-pesanan.component.html
@@ -1,1 +1,51 @@
-<img src="../../../../../assets/image/icons/status-selesai.svg">
+<div id="label-status">Status</div>
+<div class="d-flex"
+	id="icon-status">
+	<div class="d-sm-inline-flex"
+		[ngClass]="(statusprocess == 'Diproses' || statusprocess == 'Dikirim' || statusprocess == 'Sampai' || statusprocess == 'Selesai')? 'processed' : 'processed2'">
+	</div>
+	<div class="d-sm-inline-flex"
+		[ngClass]="(statusprocess == 'Dikirim' || statusprocess == 'Sampai' || statusprocess == 'Selesai')? 'hrred' : 'hrgrey'">
+	</div>
+	<div class="d-sm-inline-flex"
+		[ngClass]="(statusprocess == 'Dikirim' || statusprocess == 'Sampai' || statusprocess == 'Selesai')? 'delivery' : 'delivery2'">
+	</div>
+	<div class="d-sm-inline-flex"
+		[ngClass]="(statusprocess == 'Sampai' || statusprocess == 'Selesai')?  'hrred' : 'hrgrey'">
+	</div>
+	<div class="d-sm-inline-flex"
+		[ngClass]="(statusprocess == 'Sampai' || statusprocess == 'Selesai')? 'sampai' : 'sampai2'">
+	</div>
+	<div class="d-sm-inline-flex"
+		[ngClass]="(statusprocess == 'Selesai')?  'hrred' : 'hrgrey'">
+	</div>
+	<div class="d-sm-inline-flex"
+		[ngClass]="(statusprocess == 'Selesai')? 'confirmed' : 'confirmed2'">
+	</div>
+</div>
+
+<div class="d-flex"
+	id="date-status">
+	<div class="d-sm-inline-flex"
+		id="detail-tgl">
+		18 Juli 2020
+	</div>
+
+
+	<div class="d-sm-inline-flex"
+		id="detail-tgl">
+		26 Juli 2020
+	</div>
+
+
+	<div class="d-sm-inline-flex"
+		id="detail-tgl">
+		15 Agustus 2020
+	</div>
+
+
+	<div class="d-sm-inline-flex"
+		id="detail-tgl">
+		16 Agustus 2020
+	</div>
+</div>
