--- a/src/app/modules/transaction-detail/components/status-pesanan/status-pesanan.component.html
+++ b/src/app/modules/transaction-detail/components/status-pesanan/status-pesanan.component.html
@@ -48,4 +48,35 @@
 		id="detail-tgl">
 		16 Agustus 2020
 	</div>
+
+	<wsv wide="10px"></wsv>
+</div>
+
+
+
+<div id="eta-status">
+	<div>
+		<div class="d-flex justify-content-start"
+			id="eta-left">Perkiraan Waktu Sampai:</div>
+		<div class="d-flex justify-content-start"
+			id="eta-right">Alasan:</div>
+	</div>
+	<div>
+		<div class="d-flex justify-content-start black"
+			id="eta-left">20-21 Juli 2020</div>
+		<div class="d-flex justify-content-start red"
+			id="eta-right">2 Barang diproses, 1 barang Out of Stock</div>
+	</div>
+</div>
+
+
+<wsv wide="10px"></wsv>
+
+
+<div class="d-flex"
+	id="remark-status">
+	<div class="d-flex flex-column bd-highlight mb-3 dekat">
+		<div class="p-2 bd-highlight grey">Catatan Pengiriman:</div>
+		<div class="p-2 bd-highlight black dekatbanget">Dititipkan di resepsionis saja. Terima kasih :)</div>
+	</div>
 </div>
