--- a/src/app/modules/account/pages/account-kelola-purchaser/account-kelola-purchaser.component.html
+++ b/src/app/modules/account/pages/account-kelola-purchaser/account-kelola-purchaser.component.html
@@ -3,7 +3,10 @@
 	<div class="label-title">
 		Mengelola Purchaser
 	</div>
-	<add-button></add-button>
+	<add-button (click)="addPurchaser()"></add-button>
+</div>
+<div *ngIf="showAddPurchaserEditor">
+	<add-purchaser-editor></add-purchaser-editor>
 </div>
 <wsv wide="24px"></wsv>
 <purchaser-list></purchaser-list>
