--- a/src/app/modules/account/components-kelola-purchaser/purchaser-card/purchaser-card.component.html
+++ b/src/app/modules/account/components-kelola-purchaser/purchaser-card/purchaser-card.component.html
@@ -32,7 +32,8 @@
 			src="../../../../../assets/image/icons/purchaser-logo.png">
 		<div class="opacity-background d-flex justify-content-center align-items-center id-trash-can">
 			<img id="logo-delete"
-				src="../../../../../assets/image/icons/trash_can_3.png">
+				src="../../../../../assets/image/icons/trash_can_3.png"
+				(click)="actionTolak()">
 		</div>
 
 	</div>
