--- a/src/app/layout/pages/login-layout/login-layout.component.html
+++ b/src/app/layout/pages/login-layout/login-layout.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
-	<div class="container d-flex">
+	<div class="formlogin d-flex">
 		<login-card (loginStatusEmitter)="getLoginStatus($event)"
 			class="mx-auto my-auto">
 
