--- a/src/app/layout/components/login-card/login-card.component.html
+++ b/src/app/layout/components/login-card/login-card.component.html
@@ -1,33 +1,123 @@
-<div>
-	<mat-card class="login-card">
+<div class="d-flex flex-column bd-highlight mb-3">
+	<wsv wide="50px"></wsv>
+
+	<mat-horizontal-stepper style="width:95%;border-radius: 80px;"
+		#stepper>
+
+
+		<mat-step [stepControl]="form">
+			<form [formGroup]="form">
+				<div class="p-2 bd-highlight teks"><img src="../../../../assets/image/icons/login.svg"></div>
+				<wsv wide="10px"></wsv>
+				<div class="p-2 bd-highlight teksbesar">Log In</div>
+				<wsv wide="15px"></wsv>
+				<div class="p-2 bd-highlight teks">Kami akan mengirimkan OTP ke alamat email anda</div>
+				<wsv wide="50px"></wsv>
+				<div class="p-2 bd-highlight teks">Masukkan Alamat Email Anda</div>
+
+				<div class="p-2 bd-highlight">
+					<input type="text"
+						class="form-control"
+						placeholder="Alamat Email"
+						aria-label="Email"
+						aria-describedby="basic-addon1"
+						formControlName="email"
+						ngModel
+						required>
+				</div>
+				<div class="p-2 bd-highlight">
+					<button id="loginbutton"
+						[ngClass]="!form.valid ? 'disab' : 'enab'"
+						mat-button
+						matStepperNext
+						(click)="mbel()">
+						Get OTP
+					</button>
+					<!-- (click)="submit()" -->
+
+				</div>
+			</form>
+		</mat-step>
+
+
+		<mat-step [stepControl]="secondFormGroup">
+			<form [formGroup]="secondFormGroup">
+
+				<div class="p-2 bd-highlight teks"><img src="../../../../assets/image/icons/login-otp.svg"></div>
+				<wsv wide="10px"></wsv>
+				<div class="p-2 bd-highlight teksbesar">Verifikasi OTP</div>
+				<wsv wide="15px"></wsv>
+				<div class="p-2 bd-highlight teks">Masukkan Nomor OTP yang sudah dikirim ke <b></b></div>
+				<wsv wide="20px"></wsv>
+				<div class="p-2 bd-highlight teks">
+
+					<!-- <input type="text"
+						class="form-control"
+						placeholder="Nomor OTP"
+						aria-label="otp"
+						aria-describedby="basic-addon1"
+						formControlName="otp"
+						ngModel
+						required> -->
+
+					<ng-otp-input (onInputChange)="onOtpChange($event)"
+						[config]="{length:6}"></ng-otp-input>
+
+
+				</div>
+
+				<div class="p-2 bd-highlight">
+					Tidak Terima Nomor OTP? <span class='grey'>Kirim Ulang</span>&nbsp;
+					<countdown [config]="naconfig"
+						[ngStyle]="{'font-weight': '600','font-size':'22px','line-height': '30px','color':'#DB0A2A'}">
+					</countdown>
+
+				</div>
+
+				<div class="p-2 bd-highlight kecil">
+					Harap periksa di inbox / junk email anda
+				</div>
+
+				<div class="p-2 bd-highlight">
+					<button (click)="submit()"
+						id="loginbutton"
+						[ngClass]="!secondFormGroup.valid ? 'disab' : 'enab'">
+						Verifikasi dan Proses
+					</button>
+
+				</div>
+			</form>
+		</mat-step>
+
+	</mat-horizontal-stepper>
+
+</div>
+
+
+<!-- 
+<div class="d-flex flex-column bd-highlight mb-3">
+	<div class="p-2 bd-highlight login-card">
+	<mat-card>
+		Masukkan Alamat Email Anda
 
 		<form [formGroup]="loginForm">
-            <div class="d-flex">
-                <div class="logo mx-auto mt-5">
-                    <div class="input-group mb-3">
-                        <input type="text" 
-                        class="form-control" 
-                        placeholder="Username" 
-                        aria-label="Username" 
-                        aria-describedby="basic-addon1"
-                        formControlName="username">
-                    </div>
-                    
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2"
-                        formControlName="password"/>
-                    </div>
-                </div>
+			<div class="d-flex">
+				<div class="logo mx-auto mt-5">
+					<div class="input-group mb-3">
+						
+					</div>
 
-            </div>
-        </form>
-    </mat-card>
-    
-    <div class="d-flex btn-margin">
-        <button
-            (click)="submit()"
-            class="login-button mx-auto">
-            Login
-        </button>
-    </div>
+					<div class="input-group mb-3">
+						
+					</div>
+				</div>
+
+			</div>
+		</form>
+	</mat-card>
 </div>
+
+	<div class="p-2 bd-highlight">
+		
+	</div>
+</div> -->
