--- a/src/app/layout/pages/login-layout/login-layout.component.scss
+++ b/src/app/layout/pages/login-layout/login-layout.component.scss
@@ -1,10 +1,45 @@
 @import '../../../../styles/variables/colors';
 
 .main-container {
+	padding-bottom: 20px;
 	height: 100vh;
-	background-color: $color-primary;
+	overflow: hidden;
+	background-color: $abu-abu-2;
+	background-image: url('../../../../assets/image/icons/login-page.svg');
+	background-position: right 0px bottom 10%;
+	background-repeat: no-repeat;
+	background-size: 100%;
 
-	.container {
-		height: 90%;
+}
+
+@media only screen and (max-width: 1390px){
+
+	.formlogin{
+		width: 450px;
+		height: 612px;
+		background: #FFFFFF;
+		// opacity: 0.85;
+		box-shadow: 0px 30px 30px rgba(0, 0, 0, 0.1);
+		border-radius: 52px;
+		margin: auto;
+		position: absolute;
+		top:3%;
+		left:32%;
 	}
 }
+
+@media only screen and (min-width: 1390px){
+	.formlogin{
+		width: 450px;
+		height: 612px;
+		background: #FFFFFF;
+		// opacity: 0.85;
+		box-shadow: 0px 30px 30px rgba(0, 0, 0, 0.1);
+		border-radius: 52px;
+		margin: auto;
+		position: absolute;
+		top:15%;
+		left:38%;
+	}
+}
+
