--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -20,6 +20,9 @@ $merah-terang: #f12627;
 $abu-abu-gelap-terang: #5f5f5f;
 $abu-abu-terang-summary: #eeeeee;
 $kuning-emas: #fbb829;
+$abu-abu-muda: #E0E0E0;
+$abu-abu-putih: #F2F2F2;
+$abu-abu-lainnya: #a9a9a9;
 
 $color-primary: $kresek-merah;
 $font-color-light-bg: $hitam-tok;
