--- a/src/app/layout/components/login-card/login-card.component.html
+++ b/src/app/layout/components/login-card/login-card.component.html
@@ -81,7 +81,7 @@
 				<div class="p-2 bd-highlight">
 					<button (click)="submit()"
 						id="loginbutton"
-						[ngClass]="!secondFormGroup.valid ? 'disab' : 'enab'">
+						[ngClass]="!secondFormGroup.valid ? 'enab' : 'enab'">
 						Verifikasi dan Proses
 					</button>
 
