--- a/src/app/layout/components/header-category-button/header-category-button.component.html
+++ b/src/app/layout/components/header-category-button/header-category-button.component.html
@@ -29,7 +29,7 @@
 				<div class="card-deck">
 					<div *ngFor="let subcategory of clickedCategory?.subcategories">
 						<div class="list-sub-kategori"
-							(click)="$event.stopPropagation(); myDrop.close();goesToSub(subcategory.category_name)">
+							(click)="$event.stopPropagation(); myDrop.close();goesToSub(clickedCategory,subcategory)">
 							{{subcategory.category_name}}</div>
 					</div>
 				</div>
