--- a/src/app/layout/components/login-card/login-card.component.scss
+++ b/src/app/layout/components/login-card/login-card.component.scss
@@ -8,12 +8,24 @@
 }
 
 .grey{
+	display: inline;
 	font-weight: 700;
 	font-style: normal;
 	font-size: 16px;
 	line-height: 22px;
-	text-align: center;
+	// text-align: center;
 	color: $abu-abu-lainnya;
+}
+
+.kirimulang{
+	cursor: pointer;
+	display: none;
+	font-weight: 700;
+	font-style: normal;
+	font-size: 16px;
+	line-height: 22px;
+	// text-align: center;
+	color: $color-primary;
 }
 
 .kecil{
@@ -92,6 +104,21 @@ position: relative;
 	cursor: none;
 }
 
+.sembunyikan{
+	opacity: 0;
+}
+
 ::ng-deep .mat-horizontal-stepper-header-container {
 	display: none !important;
   }
+
+
+.warning{
+	font-style: normal;
+	font-weight: normal;
+	font-size: 12px;
+	line-height: 16px;
+	text-align: center;
+	color: $color-primary;
+	text-align: center;
+}
