--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -15,10 +15,10 @@
 		<div class="d-flex flex-column bd-highlight mb-3"
 			id="header-center">
 			<div class="header-center-top">
-				<div class="d-flex align-items-start"
-					id="hct-left">PT. NARINDO SOLUSI TELEKOMUNIKASI</div>
-				<div class="d-flex align-items-center"
-					id="hct-center">Firman Ugwemuhwem Osas</div>
+				<div class="d-flex align-items-start bigtext"
+					id="hct-left">{{datacompany.trade_name}}</div>
+				<div class="d-flex align-items-center upfirst"
+					id="hct-center">{{datauser.fullname}}</div>
 				<div class="d-flex align-items-end"
 					id="hct-right">
 
@@ -106,7 +106,7 @@
 						<img src="../../../../assets/image/icons/wallet.svg">
 					</div>
 					<div class="div-saldo-right">
-						Rp. 500.000.000
+						Rp. {{datacompany.credit_rp}}
 					</div>
 				</div>
 
