--- a/src/app/layout/components/header/header.component.scss
+++ b/src/app/layout/components/header/header.component.scss
@@ -18,6 +18,14 @@
 	position: relative;width:90px;float:left;height:100px;padding-top:5px;
 }
 
+.bigtext{
+	text-transform: uppercase;
+}
+
+.upfirst{
+	text-transform: capitalize;
+}
+
 #headers-logo {
 	height: 74px;
 	width: 81px;
