--- a/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
+++ b/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
@@ -12,7 +12,7 @@
 			<div id="label-total-produk">3411 produk <span id="choosen-produk">"sweather"</span> di semua Kategori
 			</div>
 			<div class="white-space"></div>
-			<app-catalog></app-catalog>
+			<app-catalog [items]="items"></app-catalog>
 		</div>
 	</div>
 
