--- a/src/app/shared/components/catalog-card/catalog-card.component.scss
+++ b/src/app/shared/components/catalog-card/catalog-card.component.scss
@@ -5,9 +5,9 @@
 	background: $putih-gelap-dikit;
 	border-radius: 4px;
 	// height: 290px;
-	height: 250px;
 	width: 172px;
 	margin: 0px;
+	padding-bottom: 10px;
 	background: #ffffff;
 	mix-blend-mode: normal;
 	border-radius: 4px;
