--- a/src/app/modules/detail-product/pages/detail-product-layout/detail-product-layout.component.html
+++ b/src/app/modules/detail-product/pages/detail-product-layout/detail-product-layout.component.html
@@ -2,9 +2,11 @@
 	<wsv wide="20px"></wsv>
 	<breadcrumb></breadcrumb>
 	<wsv wide='17px'></wsv>
-	<image-price-section></image-price-section>
+	<image-price-section [productDetail]="productDetail"
+		[qtyObject]="qtyObject"></image-price-section>
 	<wsv wide='23px'></wsv>
-	<deskripsi-spesifikasi-section></deskripsi-spesifikasi-section>
+	<deskripsi-spesifikasi-section [productDetail]="productDetail"></deskripsi-spesifikasi-section>
 	<wsv wide='30px'></wsv>
 </div>
-<floating-footer></floating-footer>
+<floating-footer [productDetail]="productDetail"
+	[qtyObject]="qtyObject"></floating-footer>
